--- a/style.css
+++ b/style.css
@@ -1,95 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
+:root{
+    --cor-de-fundo: #ffffff;
+    --cor-primaria: #E1E1E1;
+    --cor-input: #999999;
+    --cor-do-texto: #D9D9D9;
+    --cor-do-botao: #C50000;
 }
 
-body{
-    height: 100vh;
+body {
+    background-color: var(--cor-de-fundo);
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    max-width: 500px;
+    margin: auto;
+    background-color: var(--cor-primaria);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+img {
+   display: block;
+   margin: 0 auto;
+    
+}
+
+input[type=text], input[type=password], input[type=email], input[type=date] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     box-sizing: border-box;
-    background-color: #000000;
-    color: #F6F6F6;
 }
 
-.cabecalho{
-    padding: 5% 0 0 15%;
+button {
+    background-color: var(--cor-do-botao);
+    color: var(--cor-do-texto);
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
 }
 
-.cabecalho__menu{
-    display: flex;
-    gap: 80px;
-}
-
-.cabecalho__menu__link{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 24px;
-    font-weight: 600;
-    color: #22D4FD;
-    text-decoration: none;
-}
-
-.titulo-destaque{
-    color: #22D4FD;
-}
-
-.apresentacao{
-    margin: 5% 15%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.apresentacao__conteudo{
-    width: 615px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-}
-
-.apresentacao__conteudo__titulo{
-    font-size: 36px;
-    font-family: 'Krona One', sans-serif;
-}
-
-.apresentacao__conteudo__texto{
-    font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.apresentacao__links{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 32px;
-}
-
-.apresentacao__links__subtitulo{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-}
-
-.apresentacao__links__link{
-    /* background-color: #22D4FD; */
-    border: 2px solid #22D4FD;
-    width: 280px;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: 600;
-    padding: 21.5px 0;
-    text-decoration: none;
-    color: #f6f6f6;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.rodape{
-    color: #000000;
-    background-color: #22D4FD;
-    padding: 24px;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 24px;
-    font-weight: 400;
+button:hover {
+    background-color: #c50000d7;
 }
