--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
 :root{
     --cor-de-fundo: #ffffff;
     --cor-primaria: #E1E1E1;
@@ -6,10 +17,14 @@
     --cor-do-botao: #C50000;
 }
 
-body {
+html, body {
     background-color: var(--cor-de-fundo);
     font-family: Arial, sans-serif;
+    height: 110%;
+    width: 100%;
 }
+
+
 
 .container {
     max-width: 500px;
@@ -18,34 +33,64 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    height: 100%;
+    
 }
+
+
 
 img {
    display: block;
    margin: 0 auto;
     
 }
+.botao {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: var(--cor-do-botao);
+    color: var(--cor-do-texto);
+    padding: 10px 20px;
+  }
+  
+  .botao img {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+    order: 1;
+  }
+  
+  .botao-text {
+    margin-right: 30%;
+    order: 2;
+  }
 
 input[type=text], input[type=password], input[type=email], input[type=date] {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 4px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
+a{
+    font-size: small;
+}
+
 button {
     background-color: var(--cor-do-botao);
     color: var(--cor-do-texto);
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 16px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
 }
+
 
 button:hover {
     background-color: #c50000d7;
