--- a/style.css
+++ b/style.css
@@ -38,6 +38,96 @@ html, body {
 }
 
 
+.profile-header {
+  display: inline-block;
+  height: 30%;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.profile-header img {
+  border-radius: 50%;
+  display:  block;
+  
+}
+
+.profile-header h1 {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  
+}
+
+.profile-stats {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+li{
+  width: 15%;
+  height: 100px;
+  text-align: center;
+  align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-top: 10px;
+  
+}
+.profile-bio{
+  padding: 20px;
+}
+
+.profile-bio h2 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.profile-bio textarea{
+  width: 100%;
+  height: 64px;
+  border: none;
+  resize: none;
+  overflow: hidden;
+  font-size: 16px;
+}
+
+
+.profile-following h2 {
+  margin-top: 0;
+
+}
+
+
+.profile-following ul {
+  list-style: none;
+  padding-right: 15% ;
+  
+}
+
+.profile-following li{
+  display: block;
+  clear: both;
+  width: 100%;
+  height: 75px;
+  border: 1px solid #000000;
+  text-align: center;
+  line-height: 50px;
+  margin-top: 5px;
+}
+
+.profile-following img {
+  float: left;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+
+.profile-following a{
+  display: inline-block;
+}
+
 
 img {
    display: block;
