--- a/Nomemesa.css
+++ b/Nomemesa.css
@@ -35,6 +35,40 @@ html, body {
     
     
 }
+
+header ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+header ul li {
+  margin-right: 20px;
+  position: relative;
+}
+
+header ul li a {
+  display: block;
+  padding: 10px;
+  color: #333;
+  text-decoration: none;
+}
+
+header ul li ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+header ul li:hover ul {
+  display: block;
+}
+
 .profile-header img{
   margin-left: 12%;
 }
@@ -43,12 +77,26 @@ html, body {
   margin-top: 30px;
 }
 
-.profile-stats p{
-  margin-left: 10%;
-  margin-right: 10%;
-  padding-top: 10px;
+
+.profile-stats ul {
+  list-style: none;
+  padding-right: 15% ;
   
 }
+
+.profile-stats li{
+  display: block;
+  clear: both;
+  margin-top: 20px;
+  text-align: left;
+}
+
+.profile-stats img {
+  float: left;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+
   
   
 button {
@@ -56,7 +104,7 @@ button {
     color: var(--cor-do-texto);
     padding: 14px 20px;
     margin: 16px 0;
-    margin-top: 200px;
+    margin-top: 20%;
     border: none;
     border-radius: 4px;
     cursor: pointer;
